Uploaded image for project: 'Core ReactOS'
  1. Core ReactOS
  2. CORE-17279

RAPPS Crash when clicking on "modify" on empty list

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Major
    • 0.4.15
    • Applications
    • None

    Description

      RAPPS Crash when clicking on "modify" (same problem with "Uninstall") on empty list

      0.4.15-dev-707-g3745dad

      See screenshot for scenarii and log file for unhandled exception details

      m_ApplicationView->GetFocusedItemData() is not checked "not NULL" before using its result

      Attachments

        1. VirtualBox_ReactOS_14_09_2020_20_43_33.png
          66 kB
          Kyle_Katarn
        2. VirtualBox_ReactOS_14_09_2020_20_43_24.png
          61 kB
          Kyle_Katarn
        3. RAPPS.txt
          3 kB
          Kyle_Katarn

        Activity

          People

            Kyle_Katarn Kyle_Katarn
            Kyle_Katarn Kyle_Katarn
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: