[RAPPS] Fix of unhandled exception when trying to modify/uninstall without selection (#3185)

CORE-17279